# pygodot

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CODEX.md  example.py  pyproject.toml
.github/workflows/: tests.yml
docs/: API_SURFACE_POLICY.md  ARCHITECTURE.md  CODEX_TASKS.md  CODING_STANDARDS.md  DECISIONS.md  DSL.md  EMITTERS.md  GAME_API.md  GENERATED_BOUNDARY.md  GETTING_STARTED.md  LD49_MIGRATION_NOTES.md  MANIFEST.md  NEXT_CODEX_ROADMAP.md  OPEN_QUESTIONS.md  ROADMAP.md  RUNTIME.md  TESTING.md  pygodot_ld49_codex_roadmap.md  pygodot_near_roadmap.md
examples/animation/: README.md  game.py
examples/audio/: README.md  game.py
examples/flappy/: README.md  game.py
examples/font/: README.md  game.py
examples/generated_tres/: README.md  game.py
examples/instancing/: README.md  game.py
examples/ld49_drag_spell/: README.md  game.py
examples/ld49_scene_flow/: README.md  game.py
examples/ld49_spell_card/: README.md  game.py
examples/ld49_ui_shell/: README.md  game.py
examples/ld49_unit_card/: README.md  game.py
examples/ld49_vertical_slice/: game.py  (+1 more)
ld49_pygodot/: README.md  VALIDATION.md  game.py  validation.py
src/: compiler.py
tests/: helpers.py  test_build.py  test_build_manifest.py  test_dsl_nodes.py  test_emitters_gdscript.py  test_emitters_project.py  test_emitters_tres.py  test_emitters_tscn.py  test_examples.py  test_external_project.py  test_godot_cli.py  test_ld49_pygodot.py  test_normalize.py  test_pipeline.py  test_smoke_examples_tool.py  test_validate.py  test_values.py
tools/: smoke_examples.py  validate_ld49_pygodot.py
(+128 files in other folders)
