[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pygodot"
version = "0.0.0"
description = "Declarative Python framework to create Godot projects"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]
